Inner hits support with hybrid query (#1253)
* Inner Hits in Hybrid query

Signed-off-by: Varun Jain <varunudr@amazon.com>

* Inner hits support with hybrid query

Signed-off-by: Varun Jain <varunudr@amazon.com>

* Add changelog

Signed-off-by: Varun Jain <varunudr@amazon.com>

* fix integ tests

Signed-off-by: Varun Jain <varunudr@amazon.com>

* Modify comment

Signed-off-by: Varun Jain <varunudr@amazon.com>

* Explain test case

Signed-off-by: Varun Jain <varunudr@amazon.com>

* Optimize inner hits count calculation method

Signed-off-by: Varun Jain <varunudr@amazon.com>

---------

Signed-off-by: Varun Jain <varunudr@amazon.com>